; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_ningba.c_check_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_ningba.c_check_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lic_gba = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [156 x i32], align 16
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @r_return_val_if_fail(i32* %4, i32 0)
  %6 = load i32*, i32** %2, align 8
  %7 = getelementptr inbounds [156 x i32], [156 x i32]* %3, i64 0, i64 0
  %8 = call i32 @r_buf_read_at(i32* %6, i32 4, i32* %7, i32 624)
  %9 = getelementptr inbounds [156 x i32], [156 x i32]* %3, i64 0, i64 0
  %10 = load i32, i32* @lic_gba, align 4
  %11 = call i32 @memcmp(i32* %9, i32 %10, i32 156)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i32 @r_return_val_if_fail(i32*, i32) #1

declare dso_local i32 @r_buf_read_at(i32*, i32, i32*, i32) #1

declare dso_local i32 @memcmp(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
